--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,12 @@
 	padding: 40px 0;
 }
 
-.imagem_footer{
-    width: 120px;
-    height: 120px;
-}
-
 .copyright {
+	position: absolute;
+	display: inline;
 	color: #FFFFFF;
+	text-align: center;
 	font-size: 13px;
-	margin: 20px 0 0;
+	width: 250px;
+	margin: 20px 0 0 40%;
 }
